[gd_scene load_steps=14 format=3 uid="uid://buthc7i6qxfmx"]

[ext_resource type="FontFile" uid="uid://iblcoq7hro1i" path="res://fonts/Linefont/Linefont-VariableFont_wdth,wght.ttf" id="1_54xga"]
[ext_resource type="Script" path="res://scripts/mid_level.gd" id="1_t0l8f"]
[ext_resource type="FontFile" uid="uid://bl0ylqo1wj1th" path="res://fonts/M_PLUS_Code_Latin/MPLUSCodeLatin-VariableFont_wdth,wght.ttf" id="2_mg81j"]
[ext_resource type="Texture2D" uid="uid://c8xtu1taagk8m" path="res://sprites/icons/figther class.png" id="3_58sm0"]
[ext_resource type="Texture2D" uid="uid://dpcmj56xvfcpc" path="res://sprites/icons/booster class.png" id="4_m636t"]
[ext_resource type="Texture2D" uid="uid://rcl0ohkq4rsv" path="res://sprites/icons/bomber class.png" id="5_hc75t"]
[ext_resource type="Script" path="res://scripts/ship upgrade button.gd" id="5_n61bg"]
[ext_resource type="AudioStream" uid="uid://ci8p24g8ujpvt" path="res://audio/blipSelect.wav" id="8_aj4kg"]
[ext_resource type="AudioStream" uid="uid://d4egob66l410q" path="res://audio/powerUp.wav" id="9_xxuee"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ugh81"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hywbg"]
bg_color = Color(0, 0, 0, 0.513726)
corner_radius_top_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_shqlg"]
bg_color = Color(0.152941, 0.152941, 0.152941, 0.796078)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1qtbc"]

[node name="mid level" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_t0l8f")
highlighted_color = Color(0, 0.627451, 0.52549, 1)

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 171.0
offset_top = 45.0
offset_right = 436.0
offset_bottom = 118.0
theme_override_fonts/font = ExtResource("1_54xga")
theme_override_font_sizes/font_size = 50
text = "choose an upgrade before proceeding to the next level"

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 47.0
offset_top = 117.0
offset_right = 577.0
offset_bottom = 190.0
theme_override_fonts/font = ExtResource("2_mg81j")
theme_override_font_sizes/font_size = 20
text = "choose an upgrade before proceeding to the next level"

[node name="Label3" type="Label" parent="."]
layout_mode = 0
offset_left = 614.0
offset_top = 58.0
offset_right = 879.0
offset_bottom = 131.0
theme_override_fonts/font = ExtResource("1_54xga")
theme_override_font_sizes/font_size = 50
autowrap_mode = 3

[node name="Label4" type="Label" parent="."]
layout_mode = 0
offset_left = 622.0
offset_top = 205.0
offset_right = 888.0
offset_bottom = 289.0
theme_override_fonts/font = ExtResource("2_mg81j")
theme_override_font_sizes/font_size = 20
autowrap_mode = 3

[node name="shooter_class" type="TextureButton" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 145.0
offset_top = 316.0
offset_right = 270.0
offset_bottom = 441.0
texture_normal = ExtResource("3_58sm0")
stretch_mode = 0
script = ExtResource("5_n61bg")
txt = "add additional guns to the ship"

[node name="booster_class" type="TextureButton" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 241.0
offset_top = 168.0
offset_right = 366.0
offset_bottom = 293.0
texture_normal = ExtResource("4_m636t")
stretch_mode = 0
script = ExtResource("5_n61bg")
txt = "add ability to dash. (press space to dash)"

[node name="bomber_class" type="TextureButton" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 326.0
offset_top = 315.0
offset_right = 451.0
offset_bottom = 440.0
texture_normal = ExtResource("5_hc75t")
stretch_mode = 0
script = ExtResource("5_n61bg")
txt = "add the ability to release a time bomb. (the bomb will be released automatically every 1 second)"

[node name="TextureRect2" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 620.0
offset_top = 326.0
offset_right = 885.0
offset_bottom = 596.0
stretch_mode = 4

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 57.0
offset_top = 460.0
offset_right = 561.0
offset_bottom = 548.0
theme_override_fonts/font = ExtResource("2_mg81j")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxEmpty_ugh81")
theme_override_styles/hover = SubResource("StyleBoxFlat_hywbg")
theme_override_styles/pressed = SubResource("StyleBoxFlat_shqlg")
theme_override_styles/focus = SubResource("StyleBoxEmpty_1qtbc")
text = "Confirm"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_aj4kg")

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_xxuee")

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
